[package]
name = "s1_4chan_spider"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = {version = "1.0.137",features = ["derive"]}
serde_json = "1.0.81"
reqwest = {version = "0.11.11",features = ["json","cookies"]}
tokio = {version = "1.19.2",features = ["full"]}
jsonpath = {version = "0.1.1"}
scraper = {version = "0.13.0"}
chrono = "0.4.19"
