[package]
name = "s1_4chan_spider"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = {version = "1.0.137",features = ["derive"]}
serde_json = "1.0.81"
reqwest = {version = "0.11.11",features = ["json","cookies","blocking"]}
jsonpath = {version = "0.1.1"}
scraper = {version = "0.13.0"}
chrono = "0.4.19"
markup5ever = "0.11.0"
home = "0.5.3"
log = "0.4.17"
fern = "0.6.1"